--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,8 +1,10 @@
 /* Write your global styles here, in PostCSS syntax */
 
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Radio+Canada+Big:ital,wght@0,400..700;1,400..700&family=Yantramanav:wght@100;300;400;500;700;900&display=swap');:root {
-    font-family: "Yantramanav", Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+:root {
+    font-family: "Noto Sans", Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     --font-mono: 'Fira Mono', monospace;
     --translucent-white: rgba(255, 255, 255, 1);
@@ -105,6 +107,11 @@ button {
     margin-top: 0;
     font-size: 1.5rem;
     letter-spacing: 0.05rem;
+    margin-bottom: 0.5rem;
+}
+
+.card strong {
+    color: var(--heading-color);
 }
 
 .card p {
@@ -175,6 +182,15 @@ button {
 
 .card.clickable:hover {
     box-shadow: 0 0 10px 6px rgba(0, 0, 0, 0.1);
+}
+
+.card li {
+    line-height: 1.5rem;
+    margin-bottom: 0.5rem;
+}
+
+.card ul:last-child {
+    margin-bottom: 0;
 }
 
 .clickable:active,
