--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -220,9 +220,11 @@ button {
 }
 
 .button {
-    padding: 1rem 1.25rem;
+    padding: 0.75rem 1.25rem;
     border-radius: 0.75rem;
-    background-color: var(--event-background-color);
+    background-color: var(--link-color);
+    color: var(--event-background-color);
+    font-weight: bold;
     text-decoration: none;
     display: inline-block;
 }
