--- a/src/app.css
+++ b/src/app.css
@@ -72,11 +72,11 @@ html {
 	}
 
 	h1 {
-		@apply text-2xl font-extrabold font-title mb-2;
+		@apply text-2xl font-title mb-2;
 	}
 
 	h2 {
-		@apply font-bold text-2xl font-title;
+		@apply text-2xl font-title;
 	}
 
 	h3 {
