--- a/static/assets/vanity/bc25/main.css
+++ b/static/assets/vanity/bc25/main.css
@@ -14,6 +14,10 @@
     border-width: 30px;
     padding: 0;
     box-shadow: 0 0 0;
+    h1, h2 {
+      font-family: inherit;
+      color: inherit;
+    }
   }
 
   .nav-link:hover {
