--- a/static/assets/vanity/bc25/main.css
+++ b/static/assets/vanity/bc25/main.css
@@ -11,8 +11,8 @@
     font-family: pixel;
     image-rendering: pixelated;
     border-image: url("backgrounds/bg-card.png") 6 6 fill;
-    border-width: 30px;
-    padding: 0;
+    border-width: 24px;
+    padding: 0.5em 1em;
     box-shadow: 0 0 0;
     h1, h2 {
       font-family: inherit;
