--- a/static/assets/vanity/bc25/main.css
+++ b/static/assets/vanity/bc25/main.css
@@ -10,6 +10,7 @@
     color: black;
     font-family: pixel;
     image-rendering: pixelated;
+    font-size: small;
     border-image: url("backgrounds/bg-card.png") 6 6 fill;
     border-width: 24px;
     padding: 0.5em 1em;
@@ -62,6 +63,25 @@
   .hover {
     animation: hover 7s ease-in-out;
     animation-iteration-count: infinite;
+  }
+  audio.audio-button {
+    border-image: url("backgrounds/bg-button.png") 3 3 fill;
+    border-width: 12px;
+    padding: 0.1em 0.2em;
+    background-color: transparent;
+    font-family: pixel;
+    image-rendering: pixelated;
+    /* width: 100px; */
+    color: black;
+    &::-webkit-media-controls-current-time-display,
+    &::-webkit-media-controls-time-remaining-display,
+    &::-webkit-media-controls-overlay-play-button,
+    &::-webkit-media-controls-volume-slider,
+    &::-webkit-media-controls-timeline,
+    &::-webkit-media-controls-timeline-container {
+      font-family: pixel;
+      font-size: x-small;
+    }
   }
 }
 @keyframes slide {
