--- a/static/assets/vanity/bc25/main.css
+++ b/static/assets/vanity/bc25/main.css
@@ -4,6 +4,9 @@
 }
 
 @layer components {
+  * {
+    border-radius: 0 !important;
+  }
   .card {
     border-radius: 0;
     background-color: transparent;
@@ -26,10 +29,14 @@
       color: #e6ffa4;
       background-color: black;
       padding: 4px;
+      border: 0;
     }
     table td {
       border: 2px solid #e6ffa4;
       padding: 0.5rem 1rem;
+    }
+    blockquote {
+      color: white;
     }
   }
 
