--- a/static/assets/vanity/bc25/main.css
+++ b/static/assets/vanity/bc25/main.css
@@ -7,21 +7,22 @@
   * {
     border-radius: 0 !important;
   }
+  h1, h2, h3 {
+    font-family: pixel;
+    color: inherit;
+  }
   .card {
     border-radius: 0;
     background-color: transparent;
     color: black;
-    font-family: pixel;
     image-rendering: pixelated;
     font-size: small;
+    font-family: pixel;
+
     border-image: url("backgrounds/bg-card.png") 6 6 fill;
     border-width: 24px;
     padding: 0.5em 1em;
     box-shadow: 0 0 0;
-    h1, h2 {
-      font-family: inherit;
-      color: inherit;
-    }
     table {
       overflow-x: auto;
       display: inline-block;
